platform/kubernetes/plex/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  # ClusterIP is correct - traffic flows through Traefik IngressRoute
  # LoadBalancer is not needed since AWS ALB -> VPN -> Traefik -> this service
  type: ClusterIP
  ports:
    - name: plex
      port: 32400
      targetPort: 32400
      protocol: TCP
  selector:
    app: plex
